@@ -282,6 +282,7 @@ H4 has a number of useful functions for its own needs, but these are also availa
 ```cpp
 bool isNumeric(const string& s); // Is string a valid integer?
 string join(const vector<string>& vs,const char* delim="\n"); // flatten vector into single delimited string
+string replaceAll(const string& s,const string& f,const string& r); // replace all occurrences of f in s with r
 vector<string> split(const string& s, const char* delimiter="\n"); // break delimited string into vector of strings
 string stringFromInt(int i,const char* fmt="%d"); // convert integer to string using "printf" specifiers
 string stringFromBuff(const byte* data,int len); // converts typical message data of len n to string
