@@ -1,9 +1,9 @@
 name=H4
-version=0.2.0
+version=0.2.1
 author=Phil Bowles <h4plugins@gmail.com>
 maintainer=Phil Bowles <h4plugins@gmail.com>
 sentence=Cross-platform functional scheduler / timer 
-paragraph=Multi-Platform asynchronous callback manager allowing invocation of: bare functions, class functions, lambda functions any/all having multiple parameters. Greatly simplifies timing, sequencing. Think of javascript promises, observables, asyncy/await functionality for C++ in a minimal footprint ideal for embedded systms. For pure Arduino fans, think "Ticker library on steroids". ESP8266, ESP32, STM32F/0/1/3/4, NUCLEO-F*, Raspberry Pi, Ubuntu + any other Linux that supports C++ standard library
+paragraph=Multi-Platform asynchronous callback manager allowing invocation of: bare functions, class functions, lambda functions. Greatly simplifies timing, sequencing. Think of javascript promises, observables, asyncy/await functionality for C++ in a minimal footprint ideal for embedded systems. For pure Arduino fans, think "Ticker library on steroids". ESP8266, ESP32, STM32F/0/1/3/4, NUCLEO-F*, Raspberry Pi, Ubuntu + any other Linux that supports C++ standard library
 category=Device Control
 url=https://github.com/philbowles/h4
 architectures=*
