@@ -36,8 +36,9 @@ SOFTWARE.
 
 using namespace std;
 
-bool		    isNumeric(const string& s);
+bool		       isNumeric(const string& s);
 string 		    join(const vector<string>& vs,const char* delim="\n");
+string          replaceAll(const string& s,const string& f,const string& r);
 vector<string>  split(const string& s, const char* delimiter="\n");
 string		    stringFromInt(int i,const char* fmt="%d");
 string          stringFromBuff(const byte* data,int len);
